--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -5,11 +5,16 @@
 </head>
 <body>
 	<center>
+		<h1> Rhea </h1>
 	<table>
 		<tr>
 			<th>Rhea</th>
-			<th>Ilma</th>
-			<th>Nisa</th>
+			<th>
+				<a href="https://ibilic.github.io/Ice1/ICE1.html">Ilma</a>
+			</th>
+			<th>
+				<a href="https://ibilic.github.io/Ice1/ICE1.html">Nisa</a>
+			</th>
 		</tr>
 		<tr>
      		<th><img src="images/pug1.jpeg" alt="small pug" style="width:128px;height:128px;"></th>
