--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -18,7 +18,7 @@
 		</tr>
 		<tr>
      		<th><img src="images/pug1.jpeg" alt="small pug" style="width:128px;height:128px;"></th>
-     		<th><img src="https://kids.nationalgeographic.com/content/dam/kids/photos/animals/Fish/H-P/pufferfish-closeup.ngsversion.1427141760081.adapt.1900.1.jpg" alt="NOT a pug" style="width:128px;height:128px;"></th>
+     		<th><img src="images/unnamed.jpg" alt="NOT a pug" style="width:400px;height:300px;"></th>
      		<th><img src="images/pug2.jpeg" alt="small pug agAIN" style="width:128px;height:128px;"></th>
    		</tr>
 	</table>
@@ -44,7 +44,6 @@
 	<audio controls>
 		<source src = ""
 
-	<img src="images/unnamed.jpg" alt="woah" style="width:400px;height:300px;">
 	</center>
 </body>
 </html>
