--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -22,8 +22,8 @@
      		<th><img src="images/pug2.jpeg" alt="small pug agAIN" style="width:128px;height:128px;"></th>
    		</tr>
 	</table>
-	<!-- ILMA'S VID -->
-
+	<p> 	hey this is a paragraph </p>
+	<p> w OAH this is also a paragraph </p>
 	<form>
 		Name:
 		<input type="text" name="name" id = "name"></label><br>
@@ -42,7 +42,7 @@
 	</form>
 
 	<audio controls>
-		<source src = ""
+		<source src = "Constant Conversations.mp3" type="audio/mpeg">
 
 	</center>
 </body>
