--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -41,7 +41,7 @@
   		<input type="radio" name="snack" value="water"> Water<br>
 	</form>
 
-	<iframe width="400" height="400" src="https://www.youtube.com/watch?v=EBLuWKnKIn0" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/watch?v=EBLuWKnKIn0" allowfullscreen></iframe>
 	</center>
 </body>
 </html>
