--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -44,7 +44,7 @@
 	</form>
 
 	<div>
-		<iframe src="https://www.youtube.com/watch?v=EBLuWKnKIn0" height="200" width="300"> </iframe>
+		<iframe src="https://www.youtube.com/watch?v=EBLuWKnKIn0" height="200" width="300" frameborder="0" allowfullscreen> </iframe>
 	</div>
 	</center>
 </body>
