--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -26,12 +26,13 @@
 	<p> w OAH this is also a paragraph </p>
 	<form>
 		Name:
+		<label for="name">Name:</label>
 		<input type="text" name="name" id = "name"></label><br>
 		<label for="dob">DOB:</label>
 		<input type="date" name="DOB" id = "dob"><br>
 
 		Please enter your choice of snack:<br>
-		<input type="radio" name="snack" value="pizza"> Pizza<br>
+		<input type="radio" name="snack" value="pizza"> <label for="pizza">Pizza</label><br>
   		<input type="radio" name="snack" value="donut"> Donut<br>
   		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
 
