--- a/339/ICE1/ICE1.html
+++ b/339/ICE1/ICE1.html
@@ -31,14 +31,14 @@
 		<input type="date" name="DOB" id = "dob"><br>
 
 		Please enter your choice of snack:<br>
-		<input type="radio" name="snack" value="pizza"> <label for="pizza">Pizza</label><br>
-  		<input type="radio" name="snack" value="donut"> Donut<br>
-  		<input type="radio" name="snack" value="vegan"> Vegan Stuff<br>
+		<input type="radio" name="snack" id = "pizza" value="pizza"> <label for="pizza">Pizza</label><br>
+  		<input type="radio" name="snack" id = "donut" value="donut"> <label for="donut">Donut</label><br>
+  		<input type="radio" name="snack" id = "vegan" value="vegan"> <label for="vegan">Vegan Stuff</label><br>
 
   		Please enter your choice of drink:<br>
-		<input type="radio" name="snack" value="coffee"> Coffee<br>
-  		<input type="radio" name="snack" value="tea"> Tea<br>
-  		<input type="radio" name="snack" value="water"> Water<br>
+		<input type="radio" name="drink" id = "coffee" value="coffee"> <label for="coffee">Coffee</label><br>
+  		<input type="radio" name="drink" id = "tea" value="tea"><label for="tea">Tea</label><br>
+  		<input type="radio" name="drink" id = "water" value="water"><label for="water">Water</label><br>
 
   		<input type="submit" value="Submit">
 	</form>
