--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="icon" href="images/giraffe.png">
 	<title> Rhea Cheeti </title>
 </head>
 
@@ -11,7 +12,6 @@
 		<header>
 			<h1> Rhea Cheeti </h1>
 			<h2> Online Portfolio </h2>
-
 			<div id="navigation">
 				<ul class = "nav">
   					<li><a href="index.html">Home</a></li>
@@ -19,19 +19,33 @@
   					<li><a href="projects.html">Projects</a></li>
   					<li><a href="contact.html">Contact</a></li>
 				</ul>
+			</div>
 		</header>
 
-		<div>
-			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dictum molestie tortor, non tempus turpis. Sed volutpat felis non congue tincidunt. In varius turpis a ipsum lobortis, nec lacinia diam posuere. In bibendum velit justo, id gravida nunc ullamcorper id. Sed quis dui a leo pharetra accumsan vel sit amet nisi. Aenean eleifend quam et efficitur sodales. In a rutrum augue. Duis augue odio, facilisis eget commodo id, hendrerit vitae augue. Ut quis elit non magna tincidunt hendrerit. Morbi dui neque, tincidunt id facilisis sed, congue ac tellus.</p>
+		<div class= "main">
+			<p> Hello! My name is Rhea Cheeti and I'm a Junior at the University of Michigan. I'm currently in the School of Information with a specialization in Information Analytics, and a minor in Creative Writing through the School of Literature, Science and the Arts. </p>
 
-			<p>Etiam mattis quam massa, nec blandit mauris commodo nec. Sed justo nisl, blandit nec lacinia sed, tempor ac tellus. Cras non pretium libero. Nam commodo, elit in convallis porttitor, sapien tortor laoreet leo, sed porta leo lectus ac velit. Donec eu metus id erat condimentum aliquet ac in urna. Nullam et varius nisi, eget consequat lorem. Nulla facilisi. </p>
+			<p>I am passionate about creating stories out of data, and applying an analytical perspective to everything I do. The way technology is evolving today and affecting businesses and the decisions they make is something that fascinates me. I'm interested in exploring how companies approach these  changes, and analyzing data to understand how they can implement innovative solutions.</p>
 
-			<p>Aliquam elit dolor, varius nec metus eu, efficitur mattis metus. Duis sed efficitur mi. Fusce sit amet velit magna. Duis eu nisl pretium, viverra neque in, sagittis tellus. Vivamus fermentum nisi ac erat euismod, at mollis urna suscipit. Proin sit amet blandit eros, in interdum orci. Proin in enim fermentum, semper ante vitae, tempus odio. Vivamus egestas, leo ut posuere ullamcorper, mi enim faucibus lacus, et lobortis ipsum lectus a libero. Duis rutrum ut sapien nec dignissim. Mauris et condimentum nisi, a elementum libero. Morbi suscipit luctus justo, at posuere sapien cursus sed. Donec vel risus tristique, ornare sem ut, dapibus arcu. Nunc ac ligula lectus. Donec dolor ipsum, ultrices vitae gravida id, varius id ante. </p>
+			<p> Outside of SI, I love writing and the arts! I've been a reporter with the Michigan Daily for the past three years, and have written for a variety of beats including Student Government, Crime and Campus Life. I'm also a Section Leader in the University of Michigan Women's Glee Club, a choral ensemble featuring both undergraduate and graduate students. Since freshman year, I've been involved with the Lloyd Hall Scholars Program, a community focused on writing and the arts, serving as a Peer Advisor my Sophomore year and continuing to work in recruitment with them.</p>
 
-			<p>Cras sit amet aliquet ipsum. Suspendisse imperdiet purus dolor, et iaculis erat dapibus rhoncus. Praesent ullamcorper augue non augue volutpat convallis. Sed semper libero placerat pulvinar aliquam. Vivamus vehicula enim leo, in accumsan velit faucibus non. Aenean ac tellus ut sem dictum vehicula sed sed magna. Fusce eget massa vestibulum, aliquet risus in, rhoncus ipsum. Curabitur viverra dui a odio viverra mollis. Nam ultrices diam a purus feugiat, aliquam accumsan risus faucibus.</p>
+			<p> This portfolio includes samples of my work, including coursework completed through SI classes, external projects, and articles I've written through the Michigan Daily. </p>
 
-			<p>Nam commodo porta leo, in bibendum lectus elementum et. Sed vitae urna ex. Praesent et pretium elit. Aenean aliquet porttitor nibh, sed gravida augue pharetra in. In eu sollicitudin tellus, ut pulvinar dui. Donec consectetur justo lobortis blandit dapibus. Proin sagittis suscipit lectus. Suspendisse ac dolor sit amet nisi pulvinar malesuada in vel massa. Vivamus varius volutpat lobortis. Maecenas purus justo, ullamcorper eget leo ac, lobortis dignissim augue. Cras sed ornare nisi. </p>
+			<p>Thanks for checking it out!</p>
 		</div>
-
+		<footer>
+			<p> Rhea Cheeti © 2018 </p>
+			<div class = "social">
+				<ul>
+					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' /></a></li>
+					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' /></a></li>
+					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' /></a></li>
+				</ul>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
+
+<!–– QUESTIONS Why won't it go to home? How to organize that?
+also why are there weird bullet points in front of those? how to make them a straight line?-->
