--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,5 +47,4 @@
 </body>
 </html>
 
-<!–– QUESTIONS Why won't it go to home? How to organize that?
-also why are there weird bullet points in front of those? how to make them a straight line?-->
+<!–– QUESTIONS  why are there weird bullet points in front of icons? how to make them a straight line?-->
