--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="icon" href="images/giraffe.png">
+	<link rel="icon" href="images/giraffe1.png">
 	<title> Rhea Cheeti </title>
 </head>
 
@@ -12,16 +12,39 @@
 		<header>
 			<h1> Rhea Cheeti </h1>
 			<h2> Online Portfolio </h2>
-
 			<div id="navigation">
 				<ul class = "nav">
   					<li><a href="index.html">Home</a></li>
-  					<li><a href="about.html">About</a></li>
+  					<li><a class= 'active' href="about.html">About</a></li>
   					<li><a href="projects.html">Projects</a></li>
   					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</header>
 
-		
-</html>	
+		<div class= "main">
+
+			<p> Hello! My name is Rhea Cheeti and I'm a Junior at the University of Michigan. I'm currently in the School of Information with a specialization in Information Analytics, and a minor in Creative Writing through the School of Literature, Science and the Arts. </p>
+
+			<p>I am passionate about creating stories out of data, and applying an analytical perspective to everything I do. The way technology is evolving today and affecting businesses and the decisions they make is something that fascinates me. I'm interested in exploring how companies approach these  changes, and analyzing data to understand how they can implement innovative solutions.</p>
+
+			<p> Outside of SI, I love writing and the arts! I've been a reporter with the Michigan Daily for the past three years, and have written for a variety of beats including Student Government, Crime and Campus Life. I'm also a Section Leader in the University of Michigan Women's Glee Club, a choral ensemble featuring both undergraduate and graduate students. Since freshman year, I've been involved with the Lloyd Hall Scholars Program, a community focused on writing and the arts, serving as a Peer Advisor my Sophomore year and continuing to work in recruitment with them.</p>
+
+			<p> This portfolio includes samples of my work, including coursework completed through SI classes, external projects, and articles I've written through the Michigan Daily. </p>
+
+			<p>Thanks for checking it out!</p>
+		</div>
+		<footer>
+			<p> Rhea Cheeti © 2018 </p>
+			<div class = "social">
+				<ul>
+					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' /></a></li>
+					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' /></a></li>
+					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' /></a></li>
+				</ul>
+			</div>
+		</footer>
+	</div>
+</body>
+</html>
+
