--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -37,9 +37,9 @@
 
 			<div class = 'pictures' id='pics2'>
 				<img src="images/sunflowers.jpg" alt="Sunflowers">
-				<img src="images/camel.jpg" alt="Camel!">
-				<img src="images/trees.jpg" alt="Trees">
-				<img src="images/graffiti.jpg" alt="Graffiti">
+				<img src="images/camel.JPG" alt="Camel">
+				<img src="images/pup2.jpg" alt="Me and pup">
+				<img src="images/graffiti.JPG" alt="Graffiti">
 				<img src="images/ocean.jpg" alt="Ocean">
 			</div>
 
