--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -33,11 +33,13 @@
           				zoom: 15,
           				center: uluru
         			});
+        			initMap.alt = 'Google Map Depicting North Quad'
         			var marker = new google.maps.Marker({
           			position: uluru,
           			map: map
         			});
       			}
+
     			</script>
     			<script async defer
     				src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzOMwaZLoom-MPKMC81yP08hy4s2k_FSA&callback=initMap">
@@ -56,9 +58,9 @@
 			<p> Rhea Cheeti © 2018 </p>
 			<div class = "social">
 				<ul>
-					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' /></a></li>
-					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' /></a></li>
-					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' /></a></li>
+					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' alt = "twitter logo" /></a></li>
+					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' alt = "LinkedIn logo" /></a></li>
+					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' alt = "Instagram logo" /></a></li>
 				</ul>
 			</div>
 		</footer>	
