--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -48,9 +48,9 @@
 			<p> Rhea Cheeti © 2018 </p>
 			<div class = "social">
 				<ul>
-					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' /></a></li>
-					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' /></a></li>
-					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' /></a></li>
+					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' alt = "twitter logo" /></a></li>
+					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' alt = "LinkedIn logo" /></a></li>
+					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' alt = "Instagram logo" /></a></li>
 				</ul>
 			</div>
 		</footer>	
