--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -23,7 +23,7 @@
 			</div>
 		</header>
 
-		<h1> Projects </h1>
+		<h1 id = 'proj'> Projects </h1>
 
 		<div class= "content">
 			<div class = 'projects' id = 'project1'>
@@ -45,14 +45,14 @@
 			</div>
 
 		</div>
-		
+
 		<footer>
 			<p> Rhea Cheeti © 2018 </p>
 			<div class = "social">
 				<ul>
-					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' /></a></li>
-					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' /></a></li>
-					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' /></a></li>
+					<li><a href="https://twitter.com/rheacheeti"> <img src='images/twitter.png' alt = "twitter logo" /></a></li>
+					<li><a href="https://www.linkedin.com/in/rheacheeti"> <img src='images/linkedin.png' alt = "LinkedIn logo" /></a></li>
+					<li><a href="https://www.instagram.com/rheacheeti"> <img src='images/instagram.png' alt = "Instagram logo" /></a></li>
 				</ul>
 			</div>
 		</footer>	
