--- a/Portfolio/projects.html
+++ b/Portfolio/projects.html
@@ -28,7 +28,7 @@
 		<div class= "content">
 			<div class = 'projects' id = 'project1'>
 				<h3> Open Air Accessibility Challenge </h3>
-					<iframe src="http://rilninfo.air2018.knowbility.org/"></iframe>
+					<iframe src="https://rilninfo.air2018.knowbility.org/"></iframe>
 					<p> From February 2018 to April 2018, I worked with a group of three other students to redesign a non profit's website with a focus on web accessibility. </p>
 			</div>
 
