--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -36,7 +36,8 @@
         			initMap.alt = 'Google Map Depicting North Quad'
         			var marker = new google.maps.Marker({
           			position: uluru,
-          			map: map
+          			map: map,
+          			title: 'Google Map Depicting North Quad'
         			});
       			}
 
